# easyrec

./: README.md  data.txt  pyproject.toml  requirements.txt
app/: data.json  f.py  main.py  utils.py
test_project/: requirements.txt
test_project/app/: main.py
